; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_devctl.c_btm_set_afh_channels_complete.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_devctl.c_btm_set_afh_channels_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_7__*)*, i32 }
%struct.TYPE_7__ = type { i32, i32 }

@btm_cb = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@BTM_SUCCESS = common dso_local global i32 0, align 4
@BTM_ILLEGAL_VALUE = common dso_local global i32 0, align 4
@BTM_ERR_PROCESSING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_set_afh_channels_complete(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32 (%struct.TYPE_7__*)**, align 8
  %4 = alloca %struct.TYPE_7__, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32 (%struct.TYPE_7__*)*, i32 (%struct.TYPE_7__*)** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %6 = bitcast i32 (%struct.TYPE_7__*)* %5 to i32 (%struct.TYPE_7__*)**
  store i32 (%struct.TYPE_7__*)** %6, i32 (%struct.TYPE_7__*)*** %3, align 8
  %7 = call i32 @btu_free_timer(i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @btm_cb, i32 0, i32 0, i32 1))
  store i32 (%struct.TYPE_7__*)* null, i32 (%struct.TYPE_7__*)** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %8 = load i32 (%struct.TYPE_7__*)**, i32 (%struct.TYPE_7__*)*** %3, align 8
  %9 = icmp ne i32 (%struct.TYPE_7__*)** %8, null
  br i1 %9, label %10, label %30

10:                                               ; preds = %1
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @STREAM_TO_UINT8(i32 %12, i32* %13)
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  switch i32 %16, label %23 [
    i32 128, label %17
    i32 129, label %20
    i32 130, label %20
  ]

17:                                               ; preds = %10
  %18 = load i32, i32* @BTM_SUCCESS, align 4
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 1
  store i32 %18, i32* %19, align 4
  br label %26

20:                                               ; preds = %10, %10
  %21 = load i32, i32* @BTM_ILLEGAL_VALUE, align 4
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 1
  store i32 %21, i32* %22, align 4
  br label %26

23:                                               ; preds = %10
  %24 = load i32, i32* @BTM_ERR_PROCESSING, align 4
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 1
  store i32 %24, i32* %25, align 4
  br label %26

26:                                               ; preds = %23, %20, %17
  %27 = load i32 (%struct.TYPE_7__*)**, i32 (%struct.TYPE_7__*)*** %3, align 8
  %28 = load i32 (%struct.TYPE_7__*)*, i32 (%struct.TYPE_7__*)** %27, align 8
  %29 = call i32 %28(%struct.TYPE_7__* %4)
  br label %30

30:                                               ; preds = %26, %1
  ret void
}

declare dso_local i32 @btu_free_timer(i32*) #1

declare dso_local i32 @STREAM_TO_UINT8(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
